# fast_rosbag_pandas

./: .gitmodules  LICENSE  README.md
.github/workflows/: main.yml
fast_rosbag_pandas/: CMakeLists.txt  notes.txt  package.xml  setup.py
fast_rosbag_pandas/include/fast_rosbag_pandas/: rosbag_to_ndarrays.h
fast_rosbag_pandas/src/: benchmark.cpp  rosbag_to_ndarrays.cpp
fast_rosbag_pandas/src/fast_rosbag_pandas/: __init__.py
fast_rosbag_pandas/test/: rosbag_to_dataframe_test.py
