<?xml version="1.0"?>
<package format="2">
  <name>fast_rosbag_pandas</name>
  <version>0.0.1</version>
  <description>High-speed parsing of bags into dataframes</description>

  <maintainer email="samkhal@gmail.com">Sam Khalandovsky</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>pybind11_catkin</depend>
  <depend>ros_msg_parser</depend>

  <test_depend>std_msgs</test_depend>
  <test_depend>geometry_msgs</test_depend>
  <test_depend>sensor_msgs</test_depend>

</package>
